[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d0rk3r"
version = "1.0.0"
description = "Shodan IP scraper with auto-proxy rotation. No API key needed."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Hlaing Bwar", email = "info@hlaingbwar.com"}
]
keywords = ["shodan", "osint", "recon", "bug-bounty", "pentesting", "proxy", "scraper", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests[socks]>=2.25.0",
    "beautifulsoup4>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/infohlaingbwar/d0rk3r"
Documentation = "https://www.hlaingbwar.com/articles/d0rk3r-shodan-ip-scraper-bug-bounty"
Repository = "https://github.com/infohlaingbwar/d0rk3r"
"Bug Tracker" = "https://github.com/infohlaingbwar/d0rk3r/issues"

[project.scripts]
d0rk3r = "d0rk3r_pkg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["d0rk3r_pkg*"]
exclude = ["tests*", "docs*"]
